--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,6 @@
 [tox]
-envlist = py26,py27,py32
+envlist = py27,py32
 
 [testenv]
 deps=nose
-commands=nosetests -w {toxinidir}/tests
-changedir = {envdir}
-
-[testenv:py26]
-deps=unittest2
-     nose
+commands=nosetests -x -s
